@@ -109,6 +109,12 @@ SC_TCL_EARLY_FLAGS
 
 SC_TCL_64BIT_FLAGS
 
+#--------------------------------------------------------------------
+#	Check endianness because we can optimize some operations
+#--------------------------------------------------------------------
+
+AC_C_BIGENDIAN
+
 #------------------------------------------------------------------------
 # If Tcl and Tk are installed in different places, adjust the library
 # search path to reflect this.
@@ -295,8 +301,12 @@ XFT_CFLAGS=""
 XFT_LIBS=""
 if test "$enable_xft" = "yes" ; then
     AC_MSG_CHECKING([for xft configuration])
-    XFT_CFLAGS=`xft-config --cflags` || enable_xft="no"
-    XFT_LIBS=`xft-config --libs` || enable_xft="no"
+    XFT_CFLAGS=`xft-config --cflags 2>/dev/null` || enable_xft="no"
+    XFT_LIBS=`xft-config --libs 2>/dev/null` || enable_xft="no"
+    if test "$enable_xft" = "no" ; then
+	XFT_CFLAGS=`pkg-config --cflags xft 2>/dev/null` || enable_xft="no"
+	XFT_LIBS=`pkg-config --libs xft 2>/dev/null` || enable_xft="no"
+    fi
     if test "$enable_xft" = "yes" ; then
     	AC_MSG_RESULT([ok])
     else
